search jobs form.

--- a/app/views/vpns/edit.html.erb
+++ b/app/views/vpns/edit.html.erb
@@ -3,6 +3,15 @@
 <div class="row">
   <div class="container form_panel">
 
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"><%= link_to 'Back', vpns_path %></li>
+          <li class="next"> <%= link_to 'Show', @vpn %></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="panel panel-info form-bs">
       <div class="panel-heading">
         <h4>Editing vpn</h4>
@@ -10,9 +19,6 @@
       <div class="panel-body">
         <%= render 'form' %>
       </div>
-
-      <%= link_to 'Show', @vpn %> |
-      <%= link_to 'Back', vpns_path %>
     </div>
 
   </div>
