--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,15 @@
 <div class="row">
   <div class="container form_panel">
+
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"> <%= link_to 'Back', tasks_path %></li>
+          <li class="next"><%= link_to 'Edit', edit_task_path(@task)%></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="col-xs-12">
       <div class="panel panel-info">
         <div class="panel-heading">
@@ -24,10 +34,6 @@
               </td>
             </tr>
           </table>
-        </div>
-        <div class="panel-body">
-          <%= link_to 'Back', tasks_path, class: "btn btn-primary pull-left", type: "button" %>
-          <%= link_to 'Edit', edit_task_path(@task), class: "btn btn-success pull-right", type: "button" %>
         </div>
       </div>
     </div>
