--- a/app/views/realtors/index.html.erb
+++ b/app/views/realtors/index.html.erb
@@ -1,47 +1,87 @@
-<h1>Listing realtors</h1>
+<div class='container' id="showcases" data-ctrl="realtors">
 
-<table>
-  <tr>
-    <th>Href</th>
-    <th>Guid</th>
-    <th>Images</th>
-    <th>Address</th>
-    <th>Price</th>
-    <th>Listing</th>
-    <th>Property type</th>
-    <th>Land size</th>
-    <th>Built in</th>
-    <th>Info name</th>
-    <th>Info phone</th>
-    <th>Info email</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div class="row  cases-export-panel">
+    <div class="col-md-8">
+      <h1>Crawling <b>realtors</b></h1>
 
-<% @realtors.each do |realtor| %>
-  <tr>
-    <td><%= realtor.href %></td>
-    <td><%= realtor.guid %></td>
-    <td><%= realtor.images %></td>
-    <td><%= realtor.address %></td>
-    <td><%= realtor.price %></td>
-    <td><%= realtor.listing_id %></td>
-    <td><%= realtor.property_type %></td>
-    <td><%= realtor.land_size %></td>
-    <td><%= realtor.built_in %></td>
-    <td><%= realtor.Info_name %></td>
-    <td><%= realtor.Info_phone %></td>
-    <td><%= realtor.Info_email %></td>
-    <td><%= realtor.description %></td>
-    <td><%= link_to 'Show', realtor %></td>
-    <td><%= link_to 'Edit', edit_realtor_path(realtor) %></td>
-    <td><%= link_to 'Destroy', realtor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+      <div class="pagination">
+        <%= will_paginate @realtors, :renderer => BootstrapPagination::Rails %>
+      </div>
+    </div>
+    <div class="col-md-4">
 
-<br />
+      <div class="crawl-info-form cif-box">
+        <div class="cif-inner">
+          <h2 id="crawledItemCount"><%= number_with_delimiter(@count) %></h2>
+          <p>Crawled Items</p>
+        </div>
+        <button id="export_Button" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
+          Export to Excel
+        </button>
+      </div>
+    </div>
 
-<%= link_to 'New Realtor', new_realtor_path %>
+  </div>
+
+  <div class="row" id="cases-table">
+
+    <table class="table table-striped table-bordered table-nonfluid" cellspacing="0" width="100%">
+      <thead>
+      <tr>
+        <th style="width: auto !important;">App</th>
+        <th>Address</th>
+        <th>Price</th>
+        <th>Listing</th>
+        <th>Property type</th>
+        <th>Land size</th>
+        <th>Built in</th>
+        <th>Info name</th>
+        <th>Info phone</th>
+        <th>Info email</th>
+        <th>Description</th>
+      </tr>
+      </thead>
+
+      <% @realtors.each do |realtor| %>
+          <tr>
+            <td>
+
+              <%= link_to realtor.href do %>
+                  <%= image_tag realtor.images[0], class: "img-responsive", id: "small-thumbnail" %>
+              <% end %>
+
+            </td>
+            <td><%= realtor.address %></td>
+            <td><%= realtor.price %></td>
+            <td><%= realtor.listing_id %></td>
+            <td><%= realtor.property_type %></td>
+            <td><%= realtor.land_size %></td>
+            <td><%= realtor.built_in %></td>
+            <td><%= realtor.Info_name %></td>
+            <td><%= realtor.Info_phone %></td>
+            <td><%= realtor.Info_email %></td>
+            <td><%= realtor.description %></td>
+
+
+          </tr>
+      <% end %>
+    </table>
+
+  </div>
+
+  <div class="pagination">
+    <%= will_paginate @realtors, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+</div>
+
+<script type="text/javascript" charset="utf-8">
+  (function () {
+
+    $(document).ready(function () {
+//      setInterval(fetchCrawledCount, 1000);
+    });
+
+  }).call(this);
+</script>
+
