--- a/app/views/aliexpresses/index.html.erb
+++ b/app/views/aliexpresses/index.html.erb
@@ -1,41 +1,81 @@
-<h1>Listing aliexpresses</h1>
+<div class='container' id="showcases" data-ctrl="aliexpresss">
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Thumbnail</th>
-    <th>Seller</th>
-    <th>Price</th>
-    <th>Original price</th>
-    <th>Shipping</th>
-    <th>Ship from</th>
-    <th>Delivery time</th>
-    <th>Rate num</th>
-    <th>Total orders</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div class="row  cases-export-panel">
+    <div class="col-md-8">
+      <h1>Crawling <b>AliExpress</b></h1>
 
-<% @aliexpresses.each do |aliexpress| %>
-  <tr>
-    <td><%= aliexpress.title %></td>
-    <td><%= aliexpress.thumbnail %></td>
-    <td><%= aliexpress.seller %></td>
-    <td><%= aliexpress.price %></td>
-    <td><%= aliexpress.original_price %></td>
-    <td><%= aliexpress.shipping %></td>
-    <td><%= aliexpress.ship_from %></td>
-    <td><%= aliexpress.delivery_time %></td>
-    <td><%= aliexpress.rate_num %></td>
-    <td><%= aliexpress.total_orders %></td>
-    <td><%= link_to 'Show', aliexpress %></td>
-    <td><%= link_to 'Edit', edit_aliexpress_path(aliexpress) %></td>
-    <td><%= link_to 'Destroy', aliexpress, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+      <div class="pagination">
+        <%= will_paginate @aliexpresses, :renderer => BootstrapPagination::Rails %>
+      </div>
+    </div>
+    <div class="col-md-4">
 
-<br />
+      <div class="crawl-info-form cif-box">
+        <div class="cif-inner">
+          <h2 id="crawledItemCount"><%= number_with_delimiter(@count) %></h2>
+          <p>Crawled Items</p>
+        </div>
+        <button id="export_Button" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
+          Export to Excel
+        </button>
+      </div>
+    </div>
 
-<%= link_to 'New Aliexpress', new_aliexpress_path %>
+  </div>
+
+  <div class="row"  id="cases-table">
+
+    <table class="table table-striped table-bordered table-nonfluid" cellspacing="0" width="100%">
+      <thead>
+      <tr>
+        <th style="width: auto !important;">Item</th>
+        <th>Seller</th>
+        <th>Price</th>
+        <th>Original price</th>
+        <th>Shipping</th>
+        <th>Ship from</th>
+        <th>Delivery time</th>
+        <th>Rate num</th>
+        <th>Total orders</th>
+      </tr>
+      </thead>
+
+      <% @aliexpresses.each do |aliexpress| %>
+          <tr>
+            <td>
+
+              <%= link_to aliexpress.url do %>
+                  <%= image_tag aliexpress.thumbnail, class: "img-responsive" , id:"small-thumbnail"%>
+              <% end %>
+
+            </td>
+            <td><%= aliexpress.seller %></td>
+            <td><%= aliexpress.price %></td>
+            <td><%= aliexpress.original_price %></td>
+            <td><%= aliexpress.shipping %></td>
+            <td><%= aliexpress.ship_from %></td>
+            <td><%= aliexpress.delivery_time %></td>
+            <td><%= aliexpress.rate_num %></td>
+            <td><%= aliexpress.total_orders %></td>
+
+          </tr>
+      <% end %>
+    </table>
+
+  </div>
+
+  <div class="pagination">
+    <%= will_paginate @aliexpresses, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+</div>
+
+<script type="text/javascript" charset="utf-8">
+  (function () {
+
+    $(document).ready(function () {
+//      setInterval(fetchCrawledCount, 1000);
+    });
+
+  }).call(this);
+</script>
