search jobs form.

--- a/app/assets/stylesheets/_showcases.css.scss
+++ b/app/assets/stylesheets/_showcases.css.scss
@@ -1,6 +1,13 @@
 #showcases{
   background-color: white;
 
+  .table-description{
+    a{
+      width: 100px;
+      height: 400px;
+    }
+  }
+
   .cases-export-panel{
     padding-top: 20px;
     padding-bottom: 50px;
