--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
           <div class="copy-text">
             <a href="mailto:trujunzhang@gmail.com" target="_top" class="email">Contact Us</a>
             <h style="color: gray">
-              - 506 dong 405 shi, shanghai, Jiang su sheng, Egypt.
+              - 506, 405 shi, shanghai, Jiang su sheng, Egypt.
             </h>
             <br>
             <small style="color: grey">&copy; 2016 SCRUBY Inc. | All Rights Reserved</small>
@@ -49,7 +49,3 @@
     </div>
   </div>
 </footer>
-
-
-
-
