--- a/app/views/etsies/index.html.erb
+++ b/app/views/etsies/index.html.erb
@@ -23,30 +23,50 @@
 
   </div>
 
-  <div class="row" id="cases-table">
+  <div class="row" id="catListings">
 
     <table class="table table-striped table-bordered" cellspacing="0" width="100%">
-      <thead>
-      <tr>
-        <th>Title</th>
-        <th>Currencyvalue</th>
-        <th>Reviews</th>
-        <th>Favorites</th>
-        <th>Description</th>
-        <th>Images</th>
-      </tr>
-      </thead>
-
+      <tbody>
       <% @etsies.each do |etsy| %>
           <tr>
-            <td><%= etsy.title %></td>
-            <td><%= etsy.currencyValue %></td>
-            <td><%= etsy.reviews %></td>
-            <td><%= etsy.favorites %></td>
-            <td><%= etsy.description %></td>
-            <td><%= etsy.images %></td>
+            <td>
+              <div class="item clearfix">
+                <div class="imgWrap">
+                  <a href="/theme/air-real-estate-business-company-BDC3A9B"><img src="<%= etsy.images[0] %>"></a>
+                </div>
+                <div class="details">
+                  <div class="title">
+                    <a class="themeURL" href="<%= etsy.url %>"><%= etsy.title %></a>
+                    <div class="author">
+                      <a href="https://www.etsy.com/shop/ZendiazSilverwork?ref=l2-shopheader-name">ZendiazSilverwork</a>
+                    </div>
+                  </div>
+
+                  <table>
+                    <tbody>
+                    <tr>
+                      <td class="slabel">reviews:</td>
+                      <td><%= etsy.reviews %></td>
+                    </tr>
+                    <tr>
+                      <td class="slabel">favorites:</td>
+                      <td><%= etsy.favorites %></td>
+                    </tr>
+                    <tr>
+                      <td class="slabel">description:</td>
+                      <td><%= etsy.description %></td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="ps">
+                  <div class="price">$ <%= etsy.currencyValue %></div>
+                </div>
+              </div>
+            </td>
           </tr>
       <% end %>
+      </tbody>
     </table>
 
   </div>
