--- a/app/views/etsies/index.html.erb
+++ b/app/views/etsies/index.html.erb
@@ -45,7 +45,7 @@
                       </div>
                     </div>
 
-                    <table>
+                    <table class="information-table">
                       <tbody>
                       <tr>
                         <td class="slabel">reviews:</td>
