search jobs form.

--- a/app/assets/stylesheets/etsies.css.scss
+++ b/app/assets/stylesheets/etsies.css.scss
@@ -36,3 +36,9 @@
   height: auto;
   max-width: 100%;
 }
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  width: 70%;
+  margin: auto;
+}
