--- a/app/views/etsies/index.html.erb
+++ b/app/views/etsies/index.html.erb
@@ -24,17 +24,33 @@
   </div>
 
   <div class="row" id="catListings">
-
+    <p style="display: none;" id="page-item-count">
+      <% @etsies.count %>
+    </p>
     <table class="table table-striped table-bordered" cellspacing="0" width="100%">
       <tbody>
       <% @etsies.each do |etsy| %>
           <tr>
             <td>
-              <div class="item clearfix">
+              <div class="item">
                 <div class="col-md-4">
-                  <div class="imgWrap">
-                    <img src="<%= etsy.images[0] %>">
+
+                  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 400px;">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox" id="<%= etsy.guid %>">
+                      <% etsy.images.each do |image| %>
+                          <div class="item">
+                            <img src="<%= image %>" class="imgWrap">
+                          </div>
+                      <% end %>
+                    </div>
+                    <script type="text/javascript" charset="utf-8">
+                      $('#<%= etsy.guid %>').carousel({
+                        interval: 3000
+                      })
+                    </script>
                   </div>
+
                 </div>
                 <div class="col-md-6">
                   <div class="details">
