--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -25,25 +25,75 @@
 
   <div class="row" id="cases-table">
 
-    <table class="table table-striped table-bordered table-nonfluid" cellspacing="0" width="100%">
-      <thead>
-      <tr>
-        <th>Title</th>
-      </tr>
-      </thead>
 
+    <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <tbody>
       <% @harajs.each do |haraj| %>
           <tr>
             <td>
+              <div class="item">
+                <div class="col-md-4">
 
-              <%= link_to haraj.url do %>
-                  <%= haraj.title %>
-              <% end %>
+                  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 400px;">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox" id="<%= haraj.guid %>">
+                      <% haraj.pictures.each do |image| %>
+                          <div class="item">
+                            <img src="<%= image %>" class="imgWrap">
+                          </div>
+                      <% end %>
+                    </div>
+                    <script type="text/javascript" charset="utf-8">
+                      $('#<%= haraj.guid %>').carousel({
+                        interval: 3000
+                      })
+                    </script>
+                  </div>
 
+                </div>
+                <div class="col-md-6">
+                  <div class="details">
+                    <div class="title">
+                      <a class="themeURL" href="<%= haraj.url %>" style="color: black;font-size: 26px;font-weight: 300;line-height: 1.2;font-family: 'Roboto';"><%= haraj.title %></a>
+                      <div class="author">
+                        <a href="https://sa.opensooq.com/ar/find?term=&cat_id=&scid=&city=&allposts_cb=true&allposts=no&price_from=&price_to=" style="color: #008ed6;font-size: 13px;">url_from</a>
+                      </div>
+                    </div>
+
+                    <table class="information-table">
+                      <tbody>
+                      <tr>
+                        <td class="slabel">address:</td>
+                        <td><%= haraj.address %></td>
+                      </tr>
+                      <tr>
+                        <td class="slabel">memberName:</td>
+                        <td><%= haraj.memberName %></td>
+                      </tr>
+                      <tr>
+                        <td class="slabel">section:</td>
+                        <td><%= haraj.section %></td>
+                      </tr>
+                      <tr>
+                        <td class="slabel">description:</td>
+                        <td><%= haraj.description %></td>
+                      </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <div class="ps">
+                    <div class="price">$ <%= haraj.currencyValue %></div>
+                  </div>
+                </div>
+              </div>
             </td>
           </tr>
       <% end %>
+      </tbody>
     </table>
+
 
   </div>
 
