search jobs form.

--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -71,10 +71,6 @@
                         <td><%= haraj.memberName %></td>
                       </tr>
                       <tr>
-                        <td class="slabel">section:</td>
-                        <td><%= haraj.section %></td>
-                      </tr>
-                      <tr>
                         <td class="slabel">description:</td>
                         <td><%= haraj.description %></td>
                       </tr>
@@ -84,7 +80,7 @@
                 </div>
                 <div class="col-md-2">
                   <div class="ps">
-                    <div class="price">$ <%= haraj.currencyValue %></div>
+                    <div class="price">$ <%= haraj.section %></div>
                   </div>
                 </div>
               </div>
