search jobs form.

--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -63,6 +63,10 @@
                     <table class="information-table">
                       <tbody>
                       <tr>
+                        <td class="slabel">city:</td>
+                        <td><%= haraj.city %></td>
+                      </tr>
+                      <tr>
                         <td class="slabel">address:</td>
                         <td><%= haraj.address %></td>
                       </tr>
