--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -56,7 +56,7 @@
                     <div class="title">
                       <a class="themeURL" href="<%= haraj.url %>" style="color: black;font-size: 26px;font-weight: 300;line-height: 1.2;font-family: 'Roboto';"><%= haraj.title %></a>
                       <div class="author">
-                        <a href="https://sa.opensooq.com/ar/find?term=&cat_id=&scid=&city=&allposts_cb=true&allposts=no&price_from=&price_to=" style="color: #008ed6;font-size: 13px;">url_from</a>
+                        <a href="https://sa.opensooq.com/ar/find?term=&cat_id=&scid=&city=&allposts_cb=true&allposts=no&price_from=&price_to=" style="color: #008ed6;font-size: 13px;">opensooq</a>
                       </div>
                     </div>
 
