search jobs form.

--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -57,7 +57,7 @@
                         <%= haraj.title %>
                       </a>
                       <div class="author">
-                        <a href="https://sa.opensooq.com/ar/find?term=&cat_id=&scid=&city=&allposts_cb=true&allposts=no&price_from=&price_to=" style="color: #008ed6;font-size: 13px;">
+                        From: <a href="<%= @from_homepage[haraj.url_from] %>" style="color: #008ed6;font-size: 13px;">
                           <%= haraj.url_from %>
                         </a>
                       </div>
