search jobs form.

--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -85,12 +85,19 @@
                         <td class="slabel">Phone Number:</td>
                         <td>
                           <div class="row" id="scontent">
-                            <div class="phoneNumber table getPhoneNumber">
-                              <span class="tableCell center fa fa-phone"></span>
-                              <span dir="ltr" class="tableCell center sellerPhone ">
-                                <img src="data:image/jpeg;base64,<%= haraj.number %>">
-                              </span>
-                            </div>
+                            <% if haraj.url_from == "opensooq" %>
+
+                                <div class="phoneNumber table getPhoneNumber">
+                                  <span class="tableCell center fa fa-phone"></span>
+                                  <span dir="ltr" class="tableCell center sellerPhone ">
+                                    <img src="data:image/jpeg;base64,<%= haraj.number %>">
+                                  </span>
+                                </div>
+
+                            <% else %>
+                                <%= haraj.number %>
+                            <% end %>
+
                           </div>
                         </td>
                       </tr>
