--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -86,14 +86,14 @@
                         <td>
                           <div class="row" id="scontent">
                             <% if haraj.url_from == "opensooq" %>
-
-                                <div class="phoneNumber table getPhoneNumber">
-                                  <span class="tableCell center fa fa-phone"></span>
-                                  <span dir="ltr" class="tableCell center sellerPhone ">
-                                    <img src="data:image/jpeg;base64,<%= haraj.number %>">
-                                  </span>
-                                </div>
-
+                                <% if haraj.number != "" %>
+                                    <div class="phoneNumber table getPhoneNumber">
+                                      <span class="tableCell center fa fa-phone"></span>
+                                      <span dir="ltr" class="tableCell center sellerPhone ">
+                                        <img src="data:image/jpeg;base64,<%= haraj.number %>">
+                                      </span>
+                                    </div>
+                                <% end %>
                             <% else %>
                                 <%= haraj.number %>
                             <% end %>
