scruby(mysql+mongo) for haraj.

--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -166,8 +166,8 @@
         fetchTableRowCount(type, selector)
       };
       setInterval(fetchCrawledCount, 1000);
-      setInterval(fetchCrawledCount, 1000);
-      setInterval(fetchCrawledCount, 1000);
+      setInterval(fetchHarajCacheCount, 1000);
+      setInterval(fetchHarajHistoryCount, 1000);
     });
 
   }).call(this);
