scruby(mysql+mongo) for haraj.

--- a/app/views/harajs/index.html.erb
+++ b/app/views/harajs/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row  cases-export-panel">
     <div class="col-md-8">
-      <h1>Crawling <b>Opensooq</b></h1>
+      <h1>Crawling <b>Haraj</b></h1>
 
       <div class="pagination">
         <%= will_paginate @harajs, :renderer => BootstrapPagination::Rails %>
